# ar_rna

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: data.yaml
configs/cv/: loso.yaml  time_block.yaml
configs/gaps/: random.yaml  sequential.yaml
configs/model/: ar.yaml  hybrid_ar_mlp.yaml  mlp.yaml
data/SENAMHI/: Estación-Carhuacayan.txt  Estación-Huayao.txt  Estación-Ingenio.txt  Estación-Jauja.txt  Estación-Ricran.txt  Estación-Santa Ana.txt  Estación-Viques.txt  Estación-Yantac.txt
data/SENAMHI-ACTUALES/: Estación-Viques -112037-201701.xls  Estación-Viques -112037-201702.xls  Estación-Viques -112037-201703.xls  Estación-Viques -112037-201704.xls  Estación-Viques -112037-201705.xls  Estación-Viques -112037-201706.xls  Estación-Viques -112037-201707.xls  Estación-Viques -112037-201708.xls  Estación-Viques -112037-201709.xls  Estación-Viques -112037-201710.xls  Estación-Viques -112037-201711.xls
data/SNIRH/: Estación-Acobamba - 000659.csv  Estación-Acobambilla - 156118.csv  Estación-Acostambo - 000625.csv  Estación-Allpachaca - 000662.csv  Estación-Allpachaca - 113158.csv  Estación-Alpamarca - 155116.csv  Estación-Andamarca - 155301.csv  Estación-Carhuacayan - 155115.csv  Estación-Casaracra - 000998.csv  Estación-Cerro de Pasco - 000593.csv  Estación-Colcabamba - 006620.csv  Estación-Cosmos - 000489.csv  Estación-Hacienda Tocaz - 000656.csv  Estación-Huamanga - 000661.csv  Estación-Huancalpi - 156126.csv  (+44 more)
docker/: Dockerfile
src/: main.py
tests/: __init__.py  test_metrics.py  test_models.py  test_preprocessing.py
(+30 files in other folders)
