[tool.poetry]
name = "mantaro-gapfilling"
version = "0.1.0"
description = "Gap-filling de precipitación diaria en la cuenca del Mantaro usando AR, RNA y híbrido AR+RNA"
authors = ["Jordy BC <jordybc1503@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "mantaro_gf", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
pyarrow = "^12.0.0"
fastparquet = "^2023.7.0"
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"
mlflow = "^2.7.0"
typer = {extras = ["all"], version = "^0.9.0"}
python-dotenv = "^1.0.0"
requests = "^2.31.0"
tqdm = "^4.66.0"
joblib = "^1.3.0"
geopandas = "^0.14.0"
shapely = "^2.0.0"
# Opcional: PyTorch para MLP más flexible
# torch = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
ipython = "^8.14.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/mantaro_gf --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
